# rust-datadog

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: agent_client.rs  apm_config.rs  config.rs  datadog_tracing.rs  hashmap_visitor.rs  lib.rs  log_record.rs  logging_config.rs  new_span_data.rs  raw_span.rs  span.rs  span_collection.rs  span_storage.rs  sql_info.rs  trace_command.rs
